--- a/src/options/index.html
+++ b/src/options/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Extension title</title>
+    <title>Website Blocker | Options page</title>
   </head>
   <body>
     <div id="root"></div>
