--- a/src/block/index.html
+++ b/src/block/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Website Blocker | Blocked Site</title>
 </head>
 <body>
-   <h1>block hmtl page</h1> 
+   <div id="root"></div>
+   <script type="module" src="/src/block/blocked.tsx"></script>
 </body>
 </html>
