--- a/src/block/index.html
+++ b/src/block/index.html
@@ -6,7 +6,7 @@
     <title>Website Blocker | Blocked Site</title>
 </head>
 <body>
-   <div id="root"></div>
+   <div id="blocked"></div>
    <script type="module" src="/src/block/blocked.tsx"></script>
 </body>
 </html>
