--- a/src/block/index.html
+++ b/src/block/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
    <div id="blocked"></div>
-   <script type="module" src="/src/block/blocked.tsx"></script>
+   <script type="module" src="/src/block/block.tsx"></script>
 </body>
 </html>
